Added Settings Configurations for both the MySQL and H2, These need to be reviewed and then we can create a custom gradle runner

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+#TODO Configure Settings
+
+logging.level.com.admiral.tsp.timesheetportal=debug
+spring.datasource.initialization-mode=embedded
+#JPA Setup
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+#Thymleaf Setup
+spring.thymeleaf.cache=false
+
+# TODO Ask Carl About the rest of settings here
 
