--- a/build.gradle
+++ b/build.gradle
@@ -23,12 +23,26 @@ repositories {
 }
 
 dependencies {
+//  Spring & Thmyleaf Impl
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
+//  Lombok
     compileOnly 'org.projectlombok:lombok'
+
+//  H2 support
+    runtimeOnly 'com.h2database:h2'
+
+//  JPA support
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+//  Spring
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
+
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
