--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,20 +1,13 @@
-#TODO Configure Settings
+#TODO Datasource
 
 #H2 config
 spring.h2.console.enabled=true
-#spring.datasource.platform=h2\
+
+#H2 Datasource
 spring.datasource.url=jdbc:h2:mem:testdb
 #Credentials Hardcoded, note this is bad and should be changed later.
 #spring.datasource.username=sa
 #spring.datasource.password=
-
 spring.datasource.continue-on-error=false
 spring.datasource.initialization-mode=embedded
 spring.datasource.platform=h2
-
-# JPA Setup
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-
-# Thymeleaf Setup
-spring.thymeleaf.cache=false
