--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-#TODO Configure Settings
-
 logging.level.com.admiral.tsp.timesheetportal=debug
 spring.datasource.initialization-mode=embedded
 #JPA Setup
@@ -8,5 +6,5 @@ spring.jpa.show-sql=true
 #Thymleaf Setup
 spring.thymeleaf.cache=false
 
-# TODO Ask Carl About the rest of settings here
+# TODO Ask Carl About the rest of Queries in SQL here
 
