creating timesheet test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,21 @@
-logging.level.com.admiral.tsp.timesheetportal=debug
+#logging.level.com.admiral.tsp.timesheetportal=debug
+#spring.datasource.initialization-mode=embedded
+##JPA Setup
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.show-sql=true
+#spring.h2.console.enabled=true
+##Thymleaf Setup
+#spring.thymeleaf.cache=false
+
+## TODO Ask Carl About the rest of Queries in SQL here
+#H2 config
+spring.h2.console.enabled=true
+
+#H2 Datasource
+spring.datasource.url=jdbc:h2:mem:testdb
+#Credentials Hardcoded, note this is bad and should be changed later.
+#spring.datasource.username=sa
+#spring.datasource.password=
+spring.datasource.continue-on-error=false
 spring.datasource.initialization-mode=embedded
-#JPA Setup
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-#Thymleaf Setup
-spring.thymeleaf.cache=false
-
-# TODO Ask Carl About the rest of Queries in SQL here
-
+spring.datasource.platform=h2
