--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
-logging.level.com.admiral.tsp.timesheetportal=debug
+logging.level.com.nsa.cm6213.charity2019walk=debug
 spring.datasource.initialization-mode=embedded
-#JPA Setup
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-#Thymleaf Setup
-spring.thymeleaf.cache=false
 
-# TODO Ask Carl About the rest of Queries in SQL here
-
+#prod/dev
+spring.profiles.active=dev
