--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,5 @@
-#TODO Datasource
-
-#MySQL config
-spring.datasource.url=jdbc:mysql://localhost:3306/tsap?useSSL=false&requireSSL=false&serverTimezone=UTC
+#SQL
+spring.datasource.url=jdbc:mysql://localhost:3306/tsap?createDatabaseIfNotExist=true&useSSL=false&requireSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=comsc
 spring.datasource.platform=MYSQL
