--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ build/
 .idea
 *.iws
 *.iml
+*.xml
 *.ipr
 out/
 
@@ -141,3 +142,4 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+src/test/resources/
