--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,11 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
 #prod/dev
+
 spring.profiles.active=dev
+
+#SPRING RESOURCE HANDLING
+spring.resources.static-locations=classpath:/static/,classpath:/resources/,classpath:/resources/static/,classpath:/META-INF/resources/
+
+#Debug Text After JVM Running in Console
+debug=true
