added login security-1 to security-4

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ logging.level.com.nsa.cm6213.charity2019walk=debug
 spring.datasource.initialization-mode=embedded
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+logging.level.org.springframework.security=DEBUG
 
 #prod/dev
 
