--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ logging.level.org.springframework.security=DEBUG
 
 #prod/dev
 
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 #SPRING RESOURCE HANDLING
 spring.resources.static-locations=classpath:/static/,classpath:/resources/,classpath:/resources/static/,classpath:/META-INF/resources/
