--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,8 +4,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/tsap?createDatabaseIfNotExist=
 spring.datasource.username=root
 spring.datasource.password=comsc
 spring.datasource.platform=MYSQL
-spring.datasource.schema=sql-schema.sql
-spring.datasource.data=sql-data.sql
-spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+#spring.datasource.schema=sql-schema.sql
+#spring.datasource.data=sql-data.sql
+#spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
 spring.jpa.hibernate.ddl-auto=update
