--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.profiles.active=prod
 spring.resources.static-locations=classpath:/static/,classpath:/resources/,classpath:/resources/static/,classpath:/META-INF/resources/
 
 #Debug Text After JVM Running in Console
-debug=true
+#debug=true
