--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.com.nsa.cm6213.charity2019walk=debug
+logging.level.com.admiral.tsp.timesheetportal=debug
 spring.datasource.initialization-mode=embedded
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
