--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,11 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+
+    testCompile 'com.structurizr:structurizr-core:1.3.1'
+    testCompile 'com.structurizr:structurizr-client:1.3.1'
+    testCompile 'com.structurizr:structurizr-spring:1.3.1'
+    
 }
 
 test {
