--- a/build.gradle
+++ b/build.gradle
@@ -53,12 +53,10 @@ dependencies {
 
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
+    
     testImplementation('junit:junit:4.13')
-
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
-
+    testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testCompile 'com.structurizr:structurizr-core:1.3.1'
     testCompile 'com.structurizr:structurizr-client:1.3.1'
     testCompile 'com.structurizr:structurizr-spring:1.3.1'
