--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,10 @@ dependencies {
     
     testImplementation('junit:junit:4.13')
     testImplementation 'org.springframework.security:spring-security-test'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+    }
+
     testCompile 'com.structurizr:structurizr-core:1.3.1'
     testCompile 'com.structurizr:structurizr-client:1.3.1'
     testCompile 'com.structurizr:structurizr-spring:1.3.1'
