--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'org.springframework.boot' version '2.2.1.RELEASE'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'java'
+    id 'checkstyle'
 }
 
 group = 'com.admiral.tsp'
@@ -23,8 +24,13 @@ repositories {
     mavenCentral()
 }
 
+checkstyle {
+    toolVersion "7.6.1"
+    config = rootProject.resources.text.fromFile("config/checkstyle/checkstyle.xml")
+}
+
+
 def profile1 = "dev"
-def profile2 = "prod"
 
 
 
@@ -64,6 +70,14 @@ dependencies {
     testCompile 'com.structurizr:structurizr-client:1.3.3'
     testCompile 'com.structurizr:structurizr-spring:1.3.1'
     
+}
+
+checkstyleMain {
+    source ='src/main/java'
+}
+
+checkstyleTest {
+    source ='src/test/java'
 }
 
 test {
