--- a/.gitignore
+++ b/.gitignore
@@ -86,9 +86,9 @@ hs_err_pid*
 .idea/**/contentModel.xml
 
 # Sensitive or high-churn files
-.idea/**/dataSources/
+!.idea/**/dataSources/
 .idea/**/dataSources.ids
-.idea/**/dataSources.local.xml
+!.idea/**/dataSources.local.xml
 .idea/**/sqlDataSources.xml
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
