Update for server password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.initialization-mode=embedded
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 logging.level.org.springframework.security=DEBUG
+server.port = 8081
 
 #prod/dev
 
