--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,10 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     compile 'org.springframework.boot:spring-boot-starter-mail'
+
+//    Cachebuilder for storing attempts at login
+    compile 'com.google.guava:guava:19.0-rc2'
+
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 
     compileOnly 'org.projectlombok:lombok'
