PenTest-AuditLogging-Fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-logging.level.com.admiral.tsp.timesheetportal=debug
 spring.datasource.initialization-mode=embedded
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=INFO
+logging.level.com.admiral.tsp.timesheetportal=DEBUG
+logging.level.org.hibernate=ERROR
 
 #SSL
 server.ssl.key-store=classpath:keystore.p12
