PnS Resit Changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ server.ssl.key-store-password=password
 server.ssl.key-alias=tomcat
 server.ssl.key-password=password
 
-server.port = 8081
+server.port = 8083
 
 #Secure Cookies
 server.servlet.session.cookie.http-only=true
@@ -27,6 +27,10 @@ server.servlet.session.timeout=30m
 spring.profiles.active=prod
 #SPRING RESOURCE HANDLING
 spring.resources.static-locations=classpath:/static/,classpath:/resources/,classpath:/resources/static/,classpath:/META-INF/resources/
+
+#gzipping, only works on large resources
+server.compression.enabled=true
+server.compression.mime-types=application/json,application/xml,text/html,text/xml,test/plain
 
 #Debug Text After JVM Running in Console
 #debug=true
