--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,7 +2,7 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/tsap?createDatabaseIfNotExist=true&useSSL=false&requireSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=comsc
+spring.datasource.password=1984Halo.
 spring.datasource.platform=MYSQL
 #spring.datasource.schema=Team10_script.sql
 #spring.datasource.data=Team10_script.sql
